--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 <table cellpadding="2" cellspacing="3" align="center" width="100%">
   <tbody>
-    <tr><td>Papers accepted at ICECCS 2013</td></tr>
-    <tr><td>Papers accepted at ASIACCS 2013</td></tr>
+    <tr>
+      <td>Papers accepted at CCS 2013</td></tr>
+    <tr>
+      <td>Papers accepted at ESORICS 2013</td></tr>
 </tbody>
 </table>
     </div>
