--- a/publications.html
+++ b/publications.html
@@ -73,16 +73,15 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.<br />
+  </strong>Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
+  In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
   <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
     Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
     In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
-  <li><span style="font-weight: bold;">UserCSP: User Specified Content Security Policies.</span><br />
-  Kailas Patil, Tanvi Vyas, Frederik Braun, and Zhenkai Liang. <br />
-  In <span style="font-style: italic;">the 9th Symposium on Usable Privacy and Security (SOUPS)</span>, Newcastle, UK, July 2013. 
-  </li>
   <li><span style="font-weight: bold;">A Comprehensive Client-side
-      Behavior Model for Diagnosing Attacks in Ajax
-      Applications.</span><br />
+    Behavior Model for Diagnosing Attacks in Ajax
+    Applications.</span><br />
     Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br/>
     In <span style="font-style: italic;">the 18th International
       Conference on Engineering of Complex Computer Systems
