--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
 
 <ul>
+  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.<br />
+  </strong>Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
+  In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
+  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
+    Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
+    In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
   <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
 Interactions.</span> [<a href="papers/esorics12.pdf">PDF</a>]<br>
