updates to students

--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -149,19 +149,21 @@ In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em
     <td><div align="center"><a href="AY1213-S1.pdf">link</a></div></td>
   </tr>
 </table>
+<h3>Teaching Award</h3>
+For the academic year 2012-2013, I was selected in School of Computing to compete for the <a href="http://www.cdtl.nus.edu.sg/tawards/">Anual Teaching Excellence Award</a> of NUS. 
 <h3>Graduated students</h3>
 <p>Ph.D. Students. </p>
 <ul>
-  <li>Dawei Qi (Co-advise), 2013. </li>
-  <li>Xinshu Dong, 2013. </li>
-  <li>Kailas Patil, 2013. </li>
+  <li>Dawei Qi (Co-advise, Best Thesis Award in NUS SoC), 2013. (WorldQuant, Singapore) </li>
+  <li>Xinshu Dong, 2013. (Research Fellow at NUS)</li>
+  <li>Kailas Patil, 2013. (Assistant Professor, Vishwakarma Institute of Technology, India) </li>
 </ul>
 <p>Master Students (by research thesis option).</p>
 <ul>
-  <li>Zhengheng Goh, 2010.</li>
-  <li>Sai Sathyanarayan, 2012.</li>
-  <li>Mingwei Zhang, 2013.</li>
-  <li>Edwin Lee, 2013.</li>
+  <li>Zhengheng Goh, 2010. (CSIT Research Lab)</li>
+  <li>Sai Sathyanarayan, 2012. (Citibank, Singapore) </li>
+  <li>Mingwei Zhang, 2013. (Symantec, Singapore)</li>
+  <li>Edwin Lee, 2013. (CSIT Research Lab)</li>
 </ul>
 <p>&nbsp;</p>
 <h2>SERVICE</h2>
