--- a/research.html
+++ b/research.html
@@ -51,31 +51,27 @@ lang="en" xml:lang="en">
 <h2>Current Students</h2>
 <table cellpadding="0" cellspacing="0" align="center" width="100%">
   <tbody>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~xdong/">DONG
-    Xinshu</a> (Ph.D.)</tr></td>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~patilkr/">Kailas
-    PATIL</a> (Ph.D.)</tr></td>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~dawei/">QI Dawei
-    </a> (Ph.D. co-advise)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~xiaolei/">LI
     Xiaolei</a> (Ph.D.)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~g0900386/">DAI
     Ting</a> (Ph.D. co-advise)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~huhong/">HU Hong</a> (Ph.D.)</tr></td>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~bodhi/">Bodhisatta
-    Barman ROY</a> (Ph.D.)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~a0091939/">BAI
     Guangdong</a> (Ph.D. co-advise)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~jiayaoqi/">JIA
     Yaoqi</a> (Ph.D.)</tr></td>
-    <tr><td>ZHANG Mingwei (Master)</td></tr>
   </tbody>
 </table>
 <h2>Graduated Students</h2>
 <table cellpadding="0" cellspacing="0" align="center" width="100%">
   <tbody>
-    <tr><td>GOH Zhengheng, Master, (CSIT)</tr></td>
-    <tr><td>Sai SATHYANARAYAN, Master, (Citibank Singapore)</tr></td>
+    <tr><td>DONG Xinshu, Ph.D., 2013. (Research Fellow at NUS)</tr></td>
+    <tr><td>Kailas PATIL, Ph.D., 2013 (expected). (Assistant Professor, Vishwakarma Institute of Technology, India)</tr></td>
+    <tr><td>QI Dawei, Ph.D. (co-advise), 2013. (WorldQuant, Singapore)</tr></td>
+    <tr><td>Edwin LEE, Master, 2013. (CSIT, Singapore)</tr></td>
+    <tr><td>ZHANG Mingwei, Master, 2013. (Symantec, Singapore)</td></tr>
+    <tr><td>Sai SATHYANARAYAN, Master, 2012. (Citibank, Singapore)</tr></td>
+    <tr><td>GOH Zhengheng, Master, 2010. (CSIT, Singapore)</tr></td>
   </tbody>
 </table>
 
