--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 <table cellpadding="2" cellspacing="3" align="center" width="100%">
   <tbody>
+  	<tr>
+      <td>Papers accepted at FM 2014</td></tr>
+    <tr>
+      <td>Papers accepted at NDSS 2014</td></tr>
     <tr>
       <td>Papers accepted at CCS 2013</td></tr>
     <tr>
@@ -86,7 +90,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     <div  class="outline">
     <h2>Bio</h2>
     <p>
-      I am an assistant professor at
+      I am an associate professor at
       the <a href="http://www.comp.nus.edu.sg">School of Computing</a>,
       <a href="http://www.nus.edu.sg">National University of
       Singapore</a>.  I'm a member of
@@ -112,10 +116,18 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
 
 <ul>
-  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.<br />
-  </strong>Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
+  <li><strong>TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</strong><br />
+  Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew Martin.<br />
+  In <em>the 19th International Symposium on Formal Methods (FM)</em>, Singapore, May 2014. </li>
+  <li><strong>AirBag: Boosting Smartphone Resistance to Malware Infection.</strong> [<a href="papers/ndss14.pdf">PDF</a>]<br />
+  Chiachih Wu, Yajin Zhou, Kunal Patel, Zhenkai Liang, and Xuxian Jiang.<br />
+  In <em>the 21st Annual Network &amp;
+Distributed System Security Symposium (NDSS)</em>, San Diego, CA,
+February 2014. </li>
+  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.</strong> [<a href="papers/ccs13.pdf">PDF</a>]<br />
+  Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
   In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
-  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
+  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span> [<a href="papers/esorics13.pdf">PDF</a>]<br />
     Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
     In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
   <li><span style="font-weight: bold;">
@@ -207,13 +219,9 @@ Approach for Executing Untrusted Programs</b>. [<a
 paper award)</b><br>
 Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
 In <i>the 19th Annual Computer Security Applications Conference (ACSAC)</i>,
-Las
-Vegas,
-NV,
-December
-2003.</li>
+Las Vegas, NV, December 2003.</li>
 </ul>
-
+Last update: 14 March 2014. 
   </div>
     <table>
       <tr><td></td></tr>
