--- a/publications.html
+++ b/publications.html
@@ -73,22 +73,30 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
-  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.<br />
-  </strong>Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
+  <li><strong>TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</strong><br />
+  Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew Martin.<br />
+  In <em>the 19th International Symposium on Formal Methods (FM)</em>, Singapore, May 2014. </li>
+  <li><strong>AirBag: Boosting Smartphone Resistance to Malware Infection.</strong> [<a href="papers/ndss14.pdf">PDF</a>]<br />
+  Chiachih Wu, Yajin Zhou, Kunal Patel, Zhenkai Liang, and Xuxian Jiang.<br />
+  In <em>the 21st Annual Network &amp;
+Distributed System Security Symposium (NDSS)</em>, San Diego, CA,
+February 2014. </li>
+  <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.</strong> [<a href="papers/ccs13.pdf">PDF</a>]<br />
+  Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
   In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
-  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
+  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span> [<a href="papers/esorics13.pdf">PDF</a>]<br />
     Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
     In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
   <li><span style="font-weight: bold;">A Comprehensive Client-side
     Behavior Model for Diagnosing Attacks in Ajax
-    Applications.</span><br />
+    Applications.</span> [<a href="papers/iceccs13.pdf">PDF</a>]<br />
     Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br/>
     In <span style="font-style: italic;">the 18th International
       Conference on Engineering of Complex Computer Systems
       (ICECCS)</span>, Singapore, July 2013.  </li>
   <li><span style="font-weight: bold;"> 
   Enforcing System-Wide Control Flow Integrity for Exploit Detection
-  and Diagnosis.</span><br />
+  and Diagnosis.</span>[<a href="papers/asiaccs13.pdf">PDF</a>]<br />
   Aravind Prakash, Heng Yin and Zhenkai Liang. <br>
   In <span style="font-style: italic;"> the 8th ACM Symposium on
   Information, Computer and Communications Security (ASIACCS)</span>,
@@ -328,7 +336,7 @@ PA,
 November
 2002.</li>
 </ol>
-
+<h3>Short Papers and Posters</h3>
   </div>
     <table>
       <tr><td></td></tr>
