--- a/publications.html
+++ b/publications.html
@@ -55,9 +55,12 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 </ol>
 <h3>Journals</h3>
 <ol>
+  <li><strong>I Know Where You've Been: Geo-Inference Attacks via the Browser Cache</strong>.<br />
+    Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena. <br />
+    In <em>IEEE Internet Computing</em>, Januany/February 2015. </li>
   <li><strong>SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities. <br />
-  </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
-To appear in <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, (Accepted as of May 2013)</li>
+    </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
+    To appear in <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, (Accepted as of May 2013)</li>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
     Debugging Evolving Programs. </span>[<a href="papers/tosem12.pdf">PDF</a>]<br>
     Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
@@ -73,9 +76,26 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><strong>You Can’t Be Me: Enabling Trusted Paths &amp; User Sub-Origins in Web Browsers</strong>.<br />
+    Enrico Budianto, Yaoqi Jia, Xinshu Dong, Prateek Saxena, and Zhenkai Liang.<br />
+In <em>the 17th International Symposium on Research in Attacks, Intrusions, and Defenses (RAID)</em>, Gothenburg, Sweden, September 2014. </li>
+  <li><strong>Understanding Complex Binary Loading Behaviors</strong>.<br />
+    Ting Dai,Mingwei Zhang, Roland Yap, and Zhenkai Liang. <br />
+    In <em>the 19th International Conference on Engineering of Complex Computer Systems (ICECCS)</em>, August 2014</li>
+  <li><strong>    DroidVault: A Trusted Data Vault for Android Devices</strong>.<br />
+    <b style="color: #A30000">(Best Paper Award)</b>    <br />
+    Xiaolei Li, Hong Hu, Guangdong Bai, Yaoqi Jia, Zhenkai Liang, and Prateek Saxena. In  the <em>19th International Conference on Engineering of Complex Computer Systems (ICECCS)</em>, Tianjin, China, August 2014.</li>
+  <li><strong>A Light-weight Software Environment for Confining Android Malware</strong>. <br />
+    Xiaolei Li, Guangdong Bai, Benjamin Thian, Zhenkai Liang, and Heng Yin. <br />
+    In the <em>International Workshop on Trustworthy Computing</em>, San Francisco, CA, June 2014.</li>
+  <li><strong>I Know Where You've Been: Geo-Inference Attacks via the Browser Cache</strong>.<br />
+    <b style="color: #A30000">(Best Paper Award)</b><br />
+    Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena. <br />
+    In the <em>Web 2.0 Security &amp; Privacy Workshop (W2SP)</em>, San Jose, CA, May 2014.<br />
+  </li>
   <li><strong>TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</strong><br />
-  Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew Martin.<br />
-  In <em>the 19th International Symposium on Formal Methods (FM)</em>, Singapore, May 2014. </li>
+    Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew Martin.<br />
+    In <em>the 19th International Symposium on Formal Methods (FM)</em>, Singapore, May 2014. </li>
   <li><strong>AirBag: Boosting Smartphone Resistance to Malware Infection.</strong> [<a href="papers/ndss14.pdf">PDF</a>]<br />
   Chiachih Wu, Yajin Zhou, Kunal Patel, Zhenkai Liang, and Xuxian Jiang.<br />
   In <em>the 21st Annual Network &amp;
