--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 
   <div class="leftsidebar">
-    <div class="box">
+<!--
+   <div class="box">
       
       <h2 style="text-align:center" class="btn">News and
       Announcements</h2>
@@ -54,16 +55,12 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <table cellpadding="2" cellspacing="3" align="center" width="100%">
   <tbody>
   	<tr>
-      <td>Papers accepted at FM 2014</td></tr>
-    <tr>
-      <td>Papers accepted at NDSS 2014</td></tr>
-    <tr>
-      <td>Papers accepted at CCS 2013</td></tr>
-    <tr>
-      <td>Papers accepted at ESORICS 2013</td></tr>
+      <td> </td></tr>
+
 </tbody>
 </table>
     </div>
+-->
   </div>
 
   </div>
@@ -90,7 +87,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     <div  class="outline">
     <h2>Bio</h2>
     <p>
-      I am an associate professor at
+      I am an Associate Professor at
       the <a href="http://www.comp.nus.edu.sg">School of Computing</a>,
       <a href="http://www.nus.edu.sg">National University of
       Singapore</a>.  I'm a member of
@@ -99,12 +96,11 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
       My main research interest is in system and software security,
       web security, mobile security, and software testing.  As a
-      co-author, I received the ACM SIGSOFT Distinguished Paper Award
+      co-author, I received the Best Paper Award     in ICECCS 2014, the Best Paper Award in W2SP 2014, the ACM SIGSOFT Distinguished Paper Award
       at ESEC/FSE in 2009, the Best Paper Award at USENIX Security
-      Symposium in 2007, and the Outstanding Paper Award at the Annual
-      Computer Security Applications Conference (ACSAC) in 2003.  I
-      also received the Young Investigator Award of National
-      University of Singapore in 2008.  I got my Ph.D. degree in
+      Symposium in 2007, and the Outstanding Paper Award at ACSAC in 2003.  I
+      also won the Young Investigator Award of National
+      University of Singapore in 2008, and Annual Teaching Excellence Award of NUS in 2014.  I received my Ph.D. degree in
       <a href="http://www.cs.stonybrook.edu">Computer Science</a> from
       <a href="http://www.stonybrook.edu">Stony Brook University</a>
       in 2006, and B.S. in <a href="http://eecs.pku.edu.cn">Computer
@@ -116,17 +112,16 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
 
 <ul>
-  <li><strong>TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</strong><br />
-  Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew Martin.<br />
-  In <em>the 19th International Symposium on Formal Methods (FM)</em>, Singapore, May 2014. </li>
-  <li><strong>AirBag: Boosting Smartphone Resistance to Malware Infection.</strong> [<a href="papers/ndss14.pdf">PDF</a>]<br />
-  Chiachih Wu, Yajin Zhou, Kunal Patel, Zhenkai Liang, and Xuxian Jiang.<br />
-  In <em>the 21st Annual Network &amp;
-Distributed System Security Symposium (NDSS)</em>, San Diego, CA,
-February 2014. </li>
+  <li><strong>I Know Where You've Been: Geo-Inference Attacks via the Browser Cache</strong>.<br />
+    <b style="color: #A30000">(Best Paper Award, Workshop version in W2SP 2014)</b><br />
+    Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena. <br />
+    In <em>IEEE Internet Computing</em>, Januany/February 2015. </li>
+  <li><strong> DroidVault: A Trusted Data Vault for Android Devices</strong>.<br />
+    <b style="color: #A30000">(Best Paper Award)</b> <br />
+    Xiaolei Li, Hong Hu, Guangdong Bai, Yaoqi Jia, Zhenkai Liang, and Prateek Saxena. In  the <em>19th International Conference on Engineering of Complex Computer Systems (ICECCS)</em>, Tianjin, China, August 2014.</li>
   <li><strong>Protecting Sensitive Web Content from Client-side Vulnerabilities with Cryptons.</strong> [<a href="papers/ccs13.pdf">PDF</a>]<br />
-  Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
-  In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
+    Xinshu Dong, Zhaofeng Chen, Hossein Siadati, Shruti Tople, Prateek Saxena, and Zhenkai Liang.<br />
+    In <em>the 14th ACM Conference on Computer and Communications Security (CCS)</em>, Berlin, Germany, November 2013. </li>
   <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span> [<a href="papers/esorics13.pdf">PDF</a>]<br />
     Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
     In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
@@ -221,7 +216,7 @@ Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
 In <i>the 19th Annual Computer Security Applications Conference (ACSAC)</i>,
 Las Vegas, NV, December 2003.</li>
 </ul>
-Last update: 14 March 2014. 
+Last update: 14 October 2014. 
   </div>
     <table>
       <tr><td></td></tr>
