--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
       University of Singapore in 2008, and Annual Teaching Excellence Award of NUS in 2014.  I received my Ph.D. degree in
       <a href="http://www.cs.stonybrook.edu">Computer Science</a> from
       <a href="http://www.stonybrook.edu">Stony Brook University</a>
-      in 2006, and B.S. in <a href="http://eecs.pku.edu.cn">Computer
+      in 2006, and B.S. degrees in <a href="http://eecs.pku.edu.cn">Computer
       Science</a> and <a href="http://www.ccer.edu.cn">Economics</a> from
       <a href="http://www.pku.edu.cn">Peking University</a> in 1999.
 
