--- a/publications.html
+++ b/publications.html
@@ -5,31 +5,20 @@ lang="en" xml:lang="en">
 <head>
 <title>Zhenkai's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link rel="stylesheet" type="text/css" href="index.css" />
+   <link rel="stylesheet" href="styles.css" />
+   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
 </head>
 <body>
 
-<div class="banner">
-<h1>Dr. LIANG Zhenkai</h1>
+<div id='cssmenu'>
+<ul>
+   <li><a href='index.html'>Home</a></li>
+   <li class='active'><a href='publications.html'>Publications</a></li>
+   <li><a href='research.html'>Research</a></li>
+   <li><a href='teaching.html'>Teaching</a></li>
+</ul>
 </div>
-
-<div class="wrap">
-  <div class="left_col">
-
-    <div class="box">
-      <center>
-	<table cellpadding="4" cellspacing="4" align="center" width="95%">
-	  <tbody>
-	    <tr><td><a href="index.html" class="navbtn">Home</a></td></tr>
-	    <tr><td><a href="publications.html" class="navbtn">Publications</a></td></tr>
-	    <tr><td><a href="research.html" class="navbtn">Research</a></td></tr>
-	    <tr><td><a href="teaching.html" class="navbtn">Teaching</a></td></tr>
-	  </tbody>
-	</table>
-      </center>
-    </div>
-
-  </div>
     
       <!-- MAIN CONTENT STARTS HERE -->
 
@@ -53,8 +42,14 @@ In <i>Botnet Analysis and Defense</i>, vol. 36 of Advances in
 Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 (editors), pp. 65-88, Springer, 2008. </li>
 </ol>
-<h3>Journals</h3>
+<h3>Journals and Magazines</h3>
 <ol>
+     <li><strong>Tool, Technique, and Tao in Computer Security Education</strong>.<br />
+     Zhenkai Liang and Jian Mao.<br />
+     In <em>IEEE Reliability Magazine</em>, August/September/October, 2015. </li>
+	<li><strong>A Framework for Practical Dynamic Software Updating</strong>.<br />
+     Gang Chen, Hai Jin, Deqing Zou, Zhenkai Liang, Bing Bing Zhou, and Hao Wang. <br />
+     To appear in <em>IEEE Transactions on Parallel and Distributed Systems</em>, accepted in April 2015.</li>
   <li><strong>I Know Where You've Been: Geo-Inference Attacks via the Browser Cache</strong>.<br />
     Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena. <br />
     In <em>IEEE Internet Computing</em>, Januany/February 2015. </li>
@@ -76,6 +71,11 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><strong>Data-Oriented Programming: On the Expressiveness of Non-Control Data Attacks</strong>.<br />
+  Hong Hu, Shweta Shinde, Sendroiu Adrian, Zheng Leong Chua, Prateek Saxena, and Zhenkai Liang. <br />
+  To Appear in <em>the IEEE Symposium on Security and Privacy</em>, May 2016.  </li>
+  <li><strong>Automatic Generation of Data-Oriented Exploits</strong>.<br /> Hong Hu, Zheng Leong Chua, Sendroiu Adrian, Prateek Saxena, and Zhenkai Liang. <br />
+  In <em>the 24th USENIX Security Symposium</em>, Washington DC, August 2015. </li>
   <li><strong>You Can’t Be Me: Enabling Trusted Paths &amp; User Sub-Origins in Web Browsers</strong>.<br />
     Enrico Budianto, Yaoqi Jia, Xinshu Dong, Prateek Saxena, and Zhenkai Liang.<br />
 In <em>the 17th International Symposium on Research in Attacks, Intrusions, and Defenses (RAID)</em>, Gothenburg, Sweden, September 2014. </li>
@@ -356,7 +356,6 @@ PA,
 November
 2002.</li>
 </ol>
-<h3>Short Papers and Posters</h3>
   </div>
     <table>
       <tr><td></td></tr>
