--- a/research.html
+++ b/research.html
@@ -5,40 +5,24 @@ lang="en" xml:lang="en">
 <head>
 <title>Zhenkai's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link rel="stylesheet" type="text/css" href="index.css" />
+   <link rel="stylesheet" href="styles.css" />
+   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
 </head>
 <body>
 
-<div class="banner">
-<h1>Dr. LIANG Zhenkai</h1>
+<div id='cssmenu'>
+<ul>
+   <li><a href='index.html'>Home</a></li>
+   <li><a href='publications.html'>Publications</a></li>
+   <li  class='active'><a href='research.html'>Research</a></li>
+   <li><a href='teaching.html'>Teaching</a></li>
+</ul>
 </div>
-
-<div class="wrap">
-  <div class="left_col">
-    <div class="box">
-      <center>
-	<table cellpadding="4" cellspacing="4" align="center" width="95%">
-	  <tbody>
-	    <tr><td><a href="index.html" class="navbtn">Home</a></td></tr>
-	    <tr><td><a href="publications.html" class="navbtn">Publications</a></td></tr>
-	    <tr><td><a href="research.html" class="navbtn">Research</a></td></tr>
-	    <tr><td><a href="teaching.html" class="navbtn">Teaching</a></td></tr>
-	  </tbody>
-	</table>
-      </center>
-    </div>
-
-  </div>
     
       <!-- MAIN CONTENT STARTS HERE -->
 
-
-  <div class="mid_col">
-
-    <table>
-      <tr><td></td></tr>
-    </table>
-    <div  class="outline">
+<div  class="outline">
 
 <h2>Research Directions</h2>
 <ul>
@@ -51,22 +35,21 @@ lang="en" xml:lang="en">
 <h2>Current Students</h2>
 <table cellpadding="0" cellspacing="0" align="center" width="100%">
   <tbody>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~xiaolei/">LI
-    Xiaolei</a> (Ph.D.)</tr></td>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~g0900386/">DAI
-    Ting</a> (Ph.D. co-advise)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~huhong/">HU Hong</a> (Ph.D.)</tr></td>
-    <tr><td><a href="http://www.comp.nus.edu.sg/~a0091939/">BAI
-    Guangdong</a> (Ph.D. co-advise)</tr></td>
     <tr><td><a href="http://www.comp.nus.edu.sg/~jiayaoqi/">JIA
     Yaoqi</a> (Ph.D.)</tr></td>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~chuazl/">CHUA Zheng Leong (Ph.D. co-advise)</a></td></tr>
+    <tr><td><a href="http://www.comp.nus.edu.sg/~yangziqi/">YANG Ziqi (Ph.D.)</a></td></tr>
   </tbody>
 </table>
 <h2>Graduated Students</h2>
 <table cellpadding="0" cellspacing="0" align="center" width="100%">
   <tbody>
-    <tr><td>DONG Xinshu, Ph.D., 2013. (Research Fellow at NUS)</tr></td>
-    <tr><td>Kailas PATIL, Ph.D., 2013 (expected). (Assistant Professor, Vishwakarma Institute of Technology, India)</tr></td>
+  	<tr><td>DAI Ting, Ph.D. (co-advise), 2015. Huawei Research, Singapore.</tr></td>
+    <tr><td>LI Xiaolei, Ph.D., 2015. Research Fellow, NUS. </tr></td>
+    <tr><td>BAI Guangdong, Ph.D. (co-advise), 2015. Research Fellow, SUTD </tr></td>
+    <tr><td>DONG Xinshu, Ph.D., 2013. (Researcher at ADSC, Singapore)</tr></td>
+    <tr><td>Kailas PATIL, Ph.D., 2013. (Associate Professor, Vishwakarma Institute of Technology, India)</tr></td>
     <tr><td>QI Dawei, Ph.D. (co-advise), 2013. (WorldQuant, Singapore)</tr></td>
     <tr><td>Edwin LEE, Master, 2013. (CSIT, Singapore)</tr></td>
     <tr><td>ZHANG Mingwei, Master, 2013. (Symantec, Singapore)</td></tr>
@@ -76,13 +59,8 @@ lang="en" xml:lang="en">
 </table>
 
   </div>
-    <table>
-      <tr><td></td></tr>
-    </table>
 
-</div>
 <!-- MAIN CONTENT ENDS HERE -->
-</div>
-</div>
+
 </body>
 </html>
