--- a/teaching.html
+++ b/teaching.html
@@ -5,30 +5,20 @@ lang="en" xml:lang="en">
 <head>
 <title>Zhenkai's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link rel="stylesheet" type="text/css" href="index.css" />
+   <link rel="stylesheet" href="styles.css" />
+   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
 </head>
 <body>
 
-<div class="banner">
-<h1>Dr. LIANG Zhenkai</h1>
+<div id='cssmenu'>
+<ul>
+   <li><a href='index.html'>Home</a></li>
+   <li><a href='publications.html'>Publications</a></li>
+   <li><a href='research.html'>Research</a></li>
+   <li   class='active'><a href='teaching.html'>Teaching</a></li>
+</ul>
 </div>
-
-<div class="wrap">
-  <div class="left_col">
-    <div class="box">
-      <center>
-	<table cellpadding="4" cellspacing="4" align="center" width="95%">
-	  <tbody>
-	    <tr><td><a href="index.html" class="navbtn">Home</a></td></tr>
-	    <tr><td><a href="publications.html" class="navbtn">Publications</a></td></tr>
-	    <tr><td><a href="research.html" class="navbtn">Research</a></td></tr>
-	    <tr><td><a href="teaching.html" class="navbtn">Teaching</a></td></tr>
-	  </tbody>
-	</table>
-      </center>
-    </div>
-
-  </div>
     
       <!-- MAIN CONTENT STARTS HERE -->
 
@@ -50,10 +40,9 @@ lang="en" xml:lang="en">
   <li>CS5231 (Cryptographic Techniques &amp; Data Security)</li> AY
   2009/2010 Semester 1.
   <li>CS5231 (Systems Security)</li>
-  AY 2010/2011 Semester 1, AY 2011/2012 Semester 2, AY 2012/2013
-  Semester 2. 
+  AY 2010/2011 Semester 1, AY 2011/2012 Semester 2, AY 2012/2013  Semester 2, AY 2013/2014 Sememester 2, AY 2014/2015 Semester 1. 
   <li>CS4238 (Computer Security Practice)</li>
-  AY 2011/2012 Semester 1, AY 2012/2013 Semester 1. 
+  AY 2011/2012 Semester 1, AY 2012/2013 Semester 1, AY 2013/2014 Semester 1, AY 2014/2015 Semester 2. 
 </ul>
 
   </div>
@@ -63,7 +52,5 @@ lang="en" xml:lang="en">
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
 
-</div>
-</div>
 </body>
 </html>
