--- a/research.html
+++ b/research.html
@@ -5,9 +5,10 @@ lang="en" xml:lang="en">
 <head>
 <title>Zhenkai's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-   <link rel="stylesheet" href="styles.css" />
-   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-   <script src="script.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css" />
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script src="script.js"></script>
 </head>
 <body>
 
