--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@ lang="en" xml:lang="en">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css" />
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script src="jquery-latest.min.js" type="text/javascript"></script>
 <script src="script.js"></script>
 </head>
 <body>
